# Globy

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/: gallery.py  index.py  photos.py  search.py  users.py
app/db/: init_db.py
app/models/: metadata.py
app/services/: auth.py  captioning.py  embedding.py  image_store.py  tagging.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Results.jsx  Search.jsx  Upload.jsx
