[project]
name = "globy"
version = "0.1.0"
description = "AI image tagging and search backend"
authors = [
    {name = "Sejal1711", email = "sejalpawar1711@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=2.2.2",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
